apps/guestbook/networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-kube-prome-prometheus
  namespace: argocd-test
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomize-guestbook-ui
            port:
              number: 8010
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomize-newsvc
            port:
              number: 8020
